# pytestsetup

./: .coverage  .env  .gitignore  alembic.ini  pyproject.toml  pytest.db
.github/: ci.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 360628a1fd85_change_foreignkey_for_relevance_in_.py  59ed6c5224c6_create_tags_table_and_association_.py  7189825ff138_add_table_relevance.py  d087462e039d_add_table_card.py  fe47b29a3a73_change_primary_key_in_table_relevance.py
docs/: about_this_project.md  lessons_learned.md  sqlalchemy.md
scripts/: init_db.py
src/: config.py  main.py
src/app/: dependencies.py  logging.json  main.py
src/app/api_models/: card.py  relevance.py
src/app/routers/: card_router.py
src/app/schemas/: __init__.py  card.py  relevance.py
src/app/templates/: __init__.py  (+4 more)
src/core/: exceptions.py
src/database/: __init__.py  orm.py  unit_of_work.py
src/db/: __init__.py  orm.py
src/domain/: card.py  card_repository.py  relevance.py  relevance_repository.py  tag.py  word_type.py
src/services/: card_services.py  unit_of_work.py
test/: conftest.py
test/e2e/: test_api.py  test_card_endpoints.py
test/integration/: integration_utils.py  test_connection.py  test_orm.py  test_repositories.py  test_unit_of_work.py
test/utils/: cards_for_testing.py  tags_for_testing.py
tests/: conftest.py
tests/e2e/: test_card_endpoints.py
tests/integration/: integration_utils.py  test_connection.py  test_orm.py  test_repositories.py  test_unit_of_work.py
tests/utils/: cards_for_testing.py  fake_session.py  tags_for_testing.py
(+42 files in other folders)
